Fix shifting and add immediate focus to Notes

--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -175,8 +175,19 @@ textarea {
   float: left !important;
 }
 
+.textarea {
+  overflow-y: auto;
+  height: 200px;
+}
+
+.notesArea {
+  overflow-y: auto;
+}
+
 #notesText {
   white-space: pre-wrap;
+  height: 200px;
+  margin-bottom: 34px;
 }
 
 #notesTextEmpty {
